ncurses (5.7+20081213-1.maemo1+0m5+0cssu0) UNRELEASED; urgency=medium

  * Move xterm-256color from ncurses-term to ncurses-base,
    thanks to Iustin Pop <iusty@k1024.org> (see Debian bug #405602)
  * Switch to debhelper compatibility level 5

 -- Graham Inggs <graham@nerve.org.za>  Wed, 03 Feb 2016 22:31:19 +0200

ncurses (5.7+20081213-1.maemo1+0m5) unstable; urgency=low

  * This entry has been added by BIFH queue processor
    Suffix +0m5 added to package revision

 -- mika yrjola <ext-mika.2.yrjola@nokia.com>  Wed, 08 Apr 2009 16:34:51 +0300

ncurses (5.7+20081213-1.maemo1) unstable; urgency=low

  * New upstream release. Fixes: NB#109657.

 -- Alexander Shishkin <ext-alexander.shishkin@nokia.com>  Mon, 06 Apr 2009 11:33:38 +0300

ncurses (5.4-3.osso1) unstable; urgency=low

  * Added thumb. Fixes: NB#36727

 -- Yauheni Kaliuta <yauheni.kaliuta@nokia.com>  Mon,  7 Aug 2006 13:42:19 +0300

ncurses (5.4-3) unstable; urgency=low

  * Apply 20040313 and 20040320 patches from upstream
    (Closes: #237831, #227879).
  * Fix some remaining casts to "char" which need to be "signed char"
    (Closes: #237629, #237870, #238718).
  * Update Eterm terminfo entry to agree with the Debian practice of
    kbs=\177 (Closes: #237997).

 -- Daniel Jacobowitz <dan@debian.org>  Mon, 22 Mar 2004 16:12:36 -0500

ncurses (5.4-2) unstable; urgency=low

  * Oops, rebuild as non-native package.

 -- Daniel Jacobowitz <dan@debian.org>  Wed, 10 Mar 2004 15:00:31 -0500

ncurses (5.4-1) unstable; urgency=low

  * New upstream release (Closes: #230335, #236957).
  * Update to policy 3.6.1.0 (no changes required).

 -- Daniel Jacobowitz <dan@debian.org>  Wed, 10 Mar 2004 13:52:53 -0500

ncurses (5.3.20030719-5) unstable; urgency=low

  * Fix false dependency of ncurses-bin on lib64ncurses5 on sparc
    (Closes: #221174).
  * Update config.sub and config.guess (Closes: #221651).
  * Include wsvt25 and wsvt25m for knetbsd (Closes: #224172).