@@ -3,6 +3,8 @@ ncurses (5.7+20081213-1.maemo1+0m5+0cssu0) UNRELEASED; urgency=medium
   * Move xterm-256color from ncurses-term to ncurses-base,
     thanks to Iustin Pop <iusty@k1024.org> (see Debian bug #405602)
   * Switch to debhelper compatibility level 5
+  * Switch to source format 3.0 (quilt), remove quilt build dependency
+    and patch/unpatch logic from debian/rules
 
  -- Graham Inggs <graham@nerve.org.za>  Wed, 03 Feb 2016 22:31:19 +0200
 
